# TagOrganizer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
src/tagorganizer/: DBimport.py  __init__.py  alembic.ini  config.py  db.py  main.py  models.py  tasks.py
src/tagorganizer/migrations/: __init__.py  env.py
src/tagorganizer/migrations/versions/: 18ee44c097eb_add_geolocation_to_items.py  c3c22277f560_initial.py
src/tagorganizer/widgets/: __init__.py  add_tag_dialog.py  delete_confirmation_dialog.py  framed_label.py  helper.py  image_grid_widget.py  map.py  messages.py  profile_dialog.py  single_item.py  tag_bar.py  tag_view.py  timeline.py
